// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Schematic's identifyUser destination action: all fields 1`] = `
Object {
  "api_key": "A7WJL)2NKFy&pmtr0",
  "body": Object {
    "company": Object {
      "keys": Object {
        "testType": "A7WJL)2NKFy&pmtr0",
      },
      "name": "A7WJL)2NKFy&pmtr0",
      "traits": Object {
        "testType": "A7WJL)2NKFy&pmtr0",
      },
    },
    "keys": Object {
      "user_id": "A7WJL)2NKFy&pmtr0",
    },
    "name": "A7WJL)2NKFy&pmtr0",
    "traits": Object {
      "testType": "A7WJL)2NKFy&pmtr0",
    },
  },
  "sent_at": "2024-03-01T23:31:37.391Z",
  "type": "identify",
}
`;

exports[`Testing snapshot for Schematic's identifyUser destination action: required fields 1`] = `
Object {
  "api_key": "A7WJL)2NKFy&pmtr0",
  "body": Object {
    "company": Object {
      "keys": Object {
        "testType": "A7WJL)2NKFy&pmtr0",
      },
    },
    "keys": Object {},
  },
  "sent_at": "2024-03-01T23:31:37.382Z",
  "type": "identify",
}
`;
